--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.1.5",
     "@react-google-maps/api": "^2.20.3",
+    "framer-motion": "^11.14.4",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
