--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.1.5",
     "@react-google-maps/api": "^2.20.3",
+    "axios": "^1.7.9",
     "framer-motion": "^11.14.4",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^6.28.0"
+    "react-modal": "^3.16.3",
+    "react-model": "^4.3.1",
+    "react-router-dom": "^7.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
