--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@heroicons/react": "^2.1.5",
     "@react-google-maps/api": "^2.20.3",
     "axios": "^1.7.9",
-    "framer-motion": "^11.14.4",
+    "framer-motion": "^11.18.2",
+    "lucide-react": "^0.479.0",
+    "number-to-words": "^1.2.4",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
     "react-model": "^4.3.1",
     "react-router-dom": "^7.1.2"
