--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 VITE_BASE_URL=http://localhost:8080
+VITE_PUBLIC_URLS=/send-registration-otp,/verify-registration-otp,/fetch-user-details,/package/list,/vehicleavailable,/store/all,/city/all,/send-login-otp,/verify-login-otp
+VITE_AUTHENTICATED_URLS=/coupons,/booking/book,/booking,/booking/user
