--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 # VITE_BASE_URL=http://13.61.1.58:8081
 VITE_BASE_URL=http://localhost:8080
+# VITE_BASE_URL=http://51.21.254.202:5000
 VITE_PUBLIC_URLS=/send-registration-otp,/verify-registration-otp,/fetch-user-details,/package/list,/vehicleavailable,/store/all,/city/all,/send-login-otp,/verify-login-otp
 VITE_AUTHENTICATED_URLS=/coupons,/booking/book,/booking,/booking/user
