--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@react-google-maps/api": "^2.20.3",
     "axios": "^1.7.9",
     "framer-motion": "^11.18.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.479.0",
     "number-to-words": "^1.2.4",
     "react": "^18.3.1",
