--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # VITE_BASE_URL=http://13.61.1.58:8081
-# VITE_BASE_URL=http://localhost:8080
+VITE_BASE_URL=http://localhost:8080
 # VITE_BASE_URL=http://51.21.254.202:5000
-VITE_BASE_URL=https://api.eptiq.com 
+# VITE_BASE_URL=https://api.eptiq.com 
 VITE_PUBLIC_URLS=/send-registration-otp,/verify-registration-otp,/fetch-user-details,/package/list,/vehicleavailable,/store/all,/city/all,/send-login-otp,/verify-login-otp
 VITE_AUTHENTICATED_URLS=/coupons,/booking/book,/booking,/booking/user
